# slm-research

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ANALYSIS.md  CHANGELOG.md  INSTALL.md  POET.md  POET_dev.md  README.md  SPEC.md  UNIFIED_LOGGER_SPEC.md  WANDB_SETUP.md  install_slm_env.sh  load_cuda12_9_nccl_env.sh  load_cuda13_2_nccl_env.sh  pyproject.toml  train_dense1.sh  train_dense2.sh
.github/workflows/: ci.yaml
configs/clusters/: a100_de.yaml  b200_de.yaml  dev.yaml  h100_de.yaml  h800_cn.yaml  hpc_de.yaml
configs/data/: nemotron_cc_v2_llama31_8b.yaml  nemotron_cc_v2_scratch_llama31.yaml  nemotron_cc_v2_scratch_qwen3.yaml  nemotron_cc_v2_scratch_qwen35.yaml
configs/experiments/: _template.yaml  champion.yaml
configs/launch/: config.yaml
configs/scheduler/: constant.yaml  cosine.yaml  cosine_poet.yaml  inverse_square_root.yaml  linear.yaml  wsd.yaml  wsd_decay_only.yaml  wsd_poet.yaml
configs/training_regime/: ablation_20x.yaml  ablation_40x.yaml  final_200x.yaml  final_400x.yaml  final_wsd_decay_only.yaml  fixed_100b.yaml  fixed_10b.yaml  fixed_12b.yaml  fixed_1b.yaml  fixed_500m.yaml  fixed_50b.yaml
docs/: adding_a_family.md  data_preprocessing.md  known_good_constraint.txt  ladder_config.md  megatron_bridge_pin.md  megatron_pin.md  muon_orthogonalizing_optimizer_poet.md  onboarding.md  patches_cookbook.md  poet_exp_angle_math.md  poet_muon_q_spec.md  poet_torch_pin.md  poetx_pion_pipeline.md  promotion_protocol.md  reproduce_env.md  rms_normalization_poet_interval1.md  tokenizer_policy.md  torchtitan_api_notes.md  torchtitan_pin.md  wandb_conventions.md
docs/experiments/: _template.md  adam.md  adamw_step_decay.md  arch_bakeoff_600m.md  arch_bakeoff_600m_investigation.md  champion_history.md  muon.md  muon_hybrid.md  muon_kimi.md  ngpt.md  ngpt_muon.md  ngpt_poet.md  pgpt.md  pion.md  pion_unfused.md  poet.md  poet0.md  poet_lie.md  poet_lie_alt.md  poet_lie_head.md  poet_lie_orth.md  poet_lie_orth_alt.md  poet_lie_orth_alt_grouped.md  poet_lie_orth_alt_x.md  poet_lie_orth_head_alt.md  poet_lie_orth_in_only.md  poet_lie_orth_out_only.md  poet_lie_orth_update_rms.md  poet_lie_rms.md
docs/papers/: 2006.08419.txt
launchers/: pretrain_gpt_slm.py  pretrain_mamba_slm.py  submit.py  sweep.py  train_megatron.py  train_torchtitan.py
launchers/slurm/: bid_cluster.sbatch.j2  h800_cn.sbatch.j2  hpc_de.sbatch.j2
poet_torch_huawei/: .gitignore  pretrain_gpt.py  pretrain_gpt_muon.py  pretrain_gpt_poet.py
poet_torch_huawei/poet_torch/: __init__.py  config.py  model_wrapper.py
poet_torch_huawei/tests_poet/: test_adapter_unit.py
poet_torch_huawei/training_scripts/: parse_yaml.sh  train_3bv3_sandwich_sepllm.sh  train_DeepSeek_27b.sh  train_DeepSeek_3b.sh  train_DeepSeek_3bv3_mqa_poetx_planA.sh  train_DeepSeek_3bv3_sandwich.sh  train_DeepSeek_3bv3_sandwich_mqa.sh  train_DeepSeek_3bv3_sandwich_mqa_cx.sh  train_DeepSeek_3bv3_sandwich_mqa_cx_swa.sh  train_DeepSeek_3bv3_sandwich_mqa_muon.sh  train_DeepSeek_3bv3_sandwich_mqa_poet.sh  train_DeepSeek_3bv3_sandwich_mqa_poetx.sh  train_DeepSeek_3bv3_sandwich_mqa_swa_only.sh  train_DeepSeek_9b.sh  train_DeepSeek_dev_mock_1gpu.sh  train_Model1_30b_a5b.sh
scripts/: compare_lr_sweep.py  ngpt_config_parity.py  run_bakeoff_600m_full.sh  run_poet_init_extra.sh  run_poet_init_ortho_hi.sh  run_poet_lie_orth_update_rms_probe.sh  submit_poet_init_extra.sub  submit_poet_init_ortho_hi.sub  sweep_adam_lr.sh  sweep_alt_decorrelate.sh  sweep_angle_dim_exp_neg.sh  sweep_angle_dim_exp_pos.sh  sweep_decorrelate_fine_lambda.sh  sweep_decorrelate_fine_lambda_norm_ext.sh  sweep_finelam_node1.sh  sweep_finelam_node2.sh  sweep_finelam_node3.sh  sweep_finelam_node4.sh  sweep_finelam_node5.sh  sweep_lie_orth_alternate_every.sh  sweep_lie_orth_angle_dim_exp.sh  sweep_lie_orth_c.sh  sweep_lie_orth_decouple.sh  sweep_lie_orth_decouple_nesterov_angle.sh  sweep_lie_orth_grid_cosine.sh  sweep_lie_orth_grid_wsd.sh  sweep_lie_orth_lr.sh  sweep_lie_orth_nesterov_lr.sh  sweep_lie_orth_scale.sh  sweep_lie_orth_variants.sh  sweep_lscale_node1.sh  sweep_lscale_node2.sh  sweep_lscale_node3.sh  sweep_lscale_node4.sh  sweep_lscale_smalllr.sh  sweep_lscale_smalllr_node1.sh  sweep_lscale_smalllr_node2.sh  sweep_lscale_smalllr_node3.sh  sweep_lscale_smalllr_node4.sh  sweep_lscale_smalllr_norm1.sh  (+93 more)
src/diag/: orthogonalize.py  poet_coordination_diag.py  rotation_diag.py  single_batch.py  skew_conditioning.py
src/model/: sandwich_layer.py  sandwich_norm_ops.py  titan_init.py  unfuse_linears.py
src/optim/: __init__.py  _kimi_muon.py  _pion.py  muon.py  muon_kimi.py  pion.py  poet.py  poet_cache.py  poet_layers.py  poet_lie_momentum.py  poet_lie_orth.py  poet_lie_orth_update_rms.py  poet_scaled_layer.py  poet_skew_muon.py  poet_split.py
src/patches/: __init__.py  _registry.py  grad_conditioning.py  log_grad_norm_extra.py  lr_decay_style_step.py  model_unfuse_linears.py  muon_kimi_optimizer_setup.py  ngpt_apply_spec.py  ngpt_normalize_step.py  ngpt_optimizer_setup.py  overfit_single_batch.py  pgpt_apply_spec.py  pgpt_optimizer_setup.py  pion_optimizer_setup.py  poet_apply_to_model.py  poet_coordination_log.py  poet_grad_conditioning.py  poet_merge_step.py  poet_moe_local_rmsnorm.py  poet_optimizer_setup.py  (+10 more)
tools/: check_experiment_docs.py  lie_orth_profile.py  poet_cache_bench.py  poet_chain_breakdown.py  poet_gradcheck.py  poet_perm_bench.py  poet_skew_bench.py  poet_vs_dense_profile.py  preprocess_deepseek_nemotron.sh  preprocess_deepseek_pipeline.sh  preprocess_deepseek_tokenize.sh  preprocess_nemotron_merge.sh  preprocess_nemotron_parquet_to_jsonl.sh  preprocess_nemotron_pipeline.sh  preprocess_nemotron_tokenize.sh  preprocess_parquet_to_jsonl.py  size_check.py
(+372 files in other folders)
