[project]
name = "slm-research"
version = "0.0.1"
description = "Research infrastructure for SLM pretraining with novel training algorithms."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "NeckariumAI" }]
license = { text = "Proprietary" }

# Keep runtime deps minimal; heavy CUDA / TE / Megatron deps are installed
# per-cluster via configs/clusters/<cluster>.env and pinned in cluster YAMLs.
dependencies = [
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",
    "pyyaml>=6.0",
    "numpy>=1.26,<3.0",
    "wandb>=0.17,<1.0",
    "gitpython>=3.1",
    "pydantic>=2.6,<3.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
# Heavy deps that break on systems without a compatible NVIDIA stack.
# Installed only on cluster login / compute nodes.
gpu = [
    "torch>=2.4,<3.0",
    "transformer-engine[pytorch]>=1.12",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "launchers*", "tools*"]
exclude = ["tests*", "third_party*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires a CUDA GPU",
    "slow: slow test (>30s)",
    "integration: integration / smoke test",
    "numerics: numerical-invariance test",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["third_party/"]
