[project]
name = "slm-research"
version = "0.0.1"
description = "Research infrastructure for SLM pretraining with novel training algorithms."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "NeckariumAI" }]
license = { text = "Proprietary" }

# Keep runtime deps minimal; heavy CUDA / TE / Megatron deps are installed
# per-cluster via configs/clusters/<cluster>.env and pinned in cluster YAMLs.
dependencies = [
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",
    "pyyaml>=6.0",
    "numpy>=1.26,<3.0",
    "wandb>=0.17,<1.0",
    # Required for wandb metric logging to work at all: Megatron nests every
    # wandb.log() for loss/lr/grad-norm inside `if writer:` where writer is the
    # tensorboard SummaryWriter (training.py training_log). Without tensorboard
    # installed that writer is None and wandb gets only system metrics.
    "tensorboard>=2.14",
    "gitpython>=3.1",
    "pydantic>=2.6,<3.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
# Heavy deps that break on systems without a compatible NVIDIA stack.
# Installed only on cluster login / compute nodes. Lower bound tracks
# Megatron-LM's own constraint (see third_party/Megatron-LM/pyproject.toml).
# Transformer-Engine is intentionally NOT pinned here — install_slm_env.sh
# builds it from the git SHA mcore 0.17.0 lists in [tool.uv.sources]
# (currently 71bbefbf...), which produces version 2.14.0+71bbefbf and
# would conflict with Megatron's PyPI range pin <2.12.0 if both were
# declared. The script is the source of truth for the TE version.
gpu = [
    "torch>=2.6,<3.0",
]
data = [
    "pyarrow>=15.0",
    "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "launchers*", "tools*"]
exclude = ["tests*", "third_party*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["third_party", "src/optim/_kimi_muon.py"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# SkewMuon mirrors _kimi_muon's matrix math; uppercase Q/X/A/B are the standard
# linear-algebra names. Allow them (N803 arg, N806 local) without excluding the
# file from the rest of lint (F/B/UP/SIM/RUF still apply).
"src/optim/poet_skew_muon.py" = ["N803", "N806"]
"tests/unit/test_poet_skew_muon.py" = ["N806"]
# LieAlgebraMomentum mirrors SkewMuon's matrix math; uppercase A/G/M are the
# standard linear-algebra names.
"src/optim/poet_lie_momentum.py" = ["N803", "N806"]
"tests/unit/test_poet_lie_momentum.py" = ["N806"]
# LieOrthMomentum (skew-direction orthogonalization): A_dir/X are the standard matrix names.
"src/optim/poet_lie_orth.py" = ["N803", "N806"]
"tests/unit/test_poet_lie_orth.py" = ["N806"]
# Rotation diagnostics: R/Q are the standard rotation/skew matrix names.
"src/diag/rotation_diag.py" = ["N803", "N806"]
"tests/unit/test_diag_rotation.py" = ["N806"]
# Newton-Schulz orthogonalization: G/X/A/B are the standard matrix names.
"src/diag/orthogonalize.py" = ["N803", "N806"]
"tests/unit/test_diag_orthogonalize.py" = ["N806"]
# Batched merge tests: R_in/R_out/W0 are the standard rotation/weight matrix names.
"tests/unit/test_poet_merge_batched.py" = ["N802", "N806"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires a CUDA GPU",
    "slow: slow test (>30s)",
    "integration: integration / smoke test",
    "numerics: numerical-invariance test",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["third_party/"]
